# minimidi

./: .gitignore  CMakeLists.txt  README.md  minimidi.c  minimidi.h  minimidi_example.c
